# system_analysis

./: LICENSE  README.md  pyproject.toml
labs/: темы лаб.docx  №6_статья_по_вероятности_несвязности_планарных_графов_с_высоконадежными.docx
labs/lab_1_2025_02_27/: README.md
labs/lab_1_2025_03_12/: 1_Logistics_growth_model.ipynb  2_Ricoeur_model.ipynb  Logistics_growth_model.ipynb  Lorentz_model.ipynb  README.md  Ricoeur_model.ipynb
labs/lab_2_2025_03_13/: Cauchy_problem.ipynb  Lorenz_system.ipynb  README.md
labs/lab_4/: 4.ipynb
labs/lab_5/: 5.ipynb  README.md
labs/lab_6_7/: 6_7.ipynb  README.md
practice/: README.md
practice/1/: p_1.ipynb
practice/2/: p_2.ipynb
practice/2025_03_01/: q.py
practice/3/: scheme.pptx
practice/4/: 4.ipynb
practice/5/: 5.xlsx
practice/6/: 6.ipynb
